--- a/projects/dogen.generation.csharp/src/CMakeLists.txt
+++ b/projects/dogen.generation.csharp/src/CMakeLists.txt
@@ -35,14 +35,14 @@ set_target_properties(${name} PROPERTIES OUTPUT_NAME ${binary_name})
 set_target_properties(${name}
     PROPERTIES VERSION ${DOGEN_VERSION} SOVERSION ${DOGEN_MAJOR_VERSION})
 
-# if (DOGEN_STITCHER_COMMAND)
-#     add_custom_target(stitch_${name}
-#         COMMENT "Stitching Quilt C++ model" VERBATIM
-#         WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-#         COMMAND ${DOGEN_STITCHER_COMMAND}
-#         --target ${CMAKE_CURRENT_SOURCE_DIR}/
-#         --verbose)
-#     add_dependencies(stitch_all stitch_${name})
-# endif()
+if (DOGEN_STITCHER_EXECUTABLE)
+    add_custom_target(stitch_${name}
+        COMMENT "Stitching ${name} model" VERBATIM
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        COMMAND ${DOGEN_STITCHER_EXECUTABLE}
+        --target ${CMAKE_CURRENT_SOURCE_DIR}/
+        --log-level ${DOGEN_LOG_LEVEL})
+    add_dependencies(stitch_all stitch_${name})
+endif()
 
 install(TARGETS ${name} ARCHIVE DESTINATION lib COMPONENT libraries)
