--- a/.travis.yml
+++ b/.travis.yml
@@ -23,30 +23,74 @@ language: cpp
 cache: ccache
 
 git:
-  depth: 5
+  depth: 2
 
 matrix:
   include:
+    #
+    # OSX builds: Core Clang
+    #
     - os: osx
       compiler: clang
       osx_image: xcode8
-      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="clang"
+      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="clang" WITH_CORE_ONLY="1" WITH_CPP="1"
     - os: osx
       compiler: clang
       osx_image: xcode8
-      env: BUILD_TYPE=Debug COMPILER="clang"
+      env: BUILD_TYPE=Debug COMPILER="clang" WITH_CORE_ONLY="1" WITH_CPP="1"
+    #
+    # OSX builds: Test Models Clang
+    #
+    - os: osx
+      compiler: clang
+      osx_image: xcode8
+      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="clang" WITH_TEST_MODELS_ONLY="1"  WITH_CPP="1"
+    - os: osx
+      compiler: clang
+      osx_image: xcode8
+      env: BUILD_TYPE=Debug COMPILER="clang" WITH_TEST_MODELS_ONLY="1" WITH_CPP="1"
+    #
+    # Linux Builds: C#
+    #
     - os: linux
       compiler: gcc
-      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="gcc" WITH_CSHARP="1"
-    - os: linux
-      compiler: clang
-      env: BUILD_TYPE=Release COMPILER="clang"
+      env: BUILD_TYPE=Release COMPILER="gcc" WITH_CSHARP="1"
+    #
+    # Linux Builds: Core GCC
+    #
     - os: linux
       compiler: gcc
-      env: BUILD_TYPE=Debug COMPILER="gcc"
+      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="gcc" WITH_CORE_ONLY="1" WITH_CPP="1"
+    - os: linux
+      compiler: gcc
+      env: BUILD_TYPE=Debug COMPILER="gcc" WITH_CORE_ONLY="1" WITH_CPP="1"
+    #
+    # Linux Builds: Test Models GCC
+    #
+    - os: linux
+      compiler: gcc
+      env: BUILD_TYPE=Release COMPILER="gcc" WITH_TEST_MODELS_ONLY="1" WITH_CPP="1"
+    - os: linux
+      compiler: gcc
+      env: BUILD_TYPE=Debug COMPILER="gcc" WITH_TEST_MODELS_ONLY="1" WITH_CPP="1"
+    #
+    # Linux Builds: Core Clang
+    #
     - os: linux
       compiler: clang
-      env: BUILD_TYPE=Debug COMPILER="clang" # COVERALLS="1"
+      env: BUILD_TYPE=Release COMPILER="clang" WITH_CORE_ONLY="1" WITH_CPP="1"
+    - os: linux
+      compiler: clang
+      env: BUILD_TYPE=Debug COMPILER="clang" WITH_CORE_ONLY="1" WITH_CPP="1"
+    #
+    # Linux Builds: Test Models Clang
+    #
+    - os: linux
+      compiler: clang
+      env: BUILD_TYPE=Release COMPILER="clang" WITH_TEST_MODELS_ONLY="1" WITH_CPP="1"
+    - os: linux
+      compiler: clang
+      env: BUILD_TYPE=Debug COMPILER="clang" WITH_TEST_MODELS_ONLY="1" WITH_CPP="1"
 
 addons:
   apt:
@@ -60,18 +104,24 @@ install:
 script:
   - JOBS=2
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
-        export TARGET="package run_all_tests";
+        if [[ WITH_CORE_ONLY == '1']]; then
+            export TARGET="package run_all_tests";
+        else
+            export TARGET="run_all_tests";
+        fi
         export THIRD_PARTY="/tmp/dogen_deps/local";
     fi
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
         export PATH="/usr/local/opt/ccache/libexec:$PATH"
         export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_clang_7_3_0_osx_amd64";
-        if [[ $BUILD_TYPE == 'Release' ]]; then
+        if [[ $BUILD_TYPE == 'Release' &&  WITH_CORE_ONLY == '1' ]]; then
             export TARGET="package";
         fi
     fi
   - ${SCRIPTS_DIR}/build.${TRAVIS_OS_NAME}.sh ${BUILD_TYPE} ${JOBS} ${COMPILER} ${THIRD_PARTY} ${TARGET}
-  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER} ; fi
+  - if [[ $TRAVIS_OS_NAME == 'linux' && WITH_CORE_ONLY == '1']]; then
+        ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER}
+    fi
 
 # after_success:
 #  - gcov --version
