--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -205,23 +205,37 @@ include_directories(
 #
 # add all other projects
 #
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.input_models)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.dia)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.modeling)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.external)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.external.json)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.external.dia)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.options)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation.cpp)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation.csharp)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.formatting)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.utility)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.knitter)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.tailor)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.annotations)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.probing)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.templating)
 
+if(WITH_CORE)
+    message(STATUS, "Building core.")
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.input_models)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.dia)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.modeling)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.external)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.external.json)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.external.dia)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.options)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation.cpp)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.generation.csharp)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.formatting)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.knitter)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.tailor)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.annotations)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.probing)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.templating)
+else()
+    message(STATUS, "NOT building core.")
+endif()
+
+#
 # test models
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.test_models)
+#
+if(WITH_TEST_MODELS)
+    message(STATUS, "Building test models.")
+
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dogen.test_models)
+else()
+    message(STATUS, "NOT building test models.")
+endif()
