--- a/.travis.yml
+++ b/.travis.yml
@@ -104,7 +104,7 @@ install:
 script:
   - JOBS=2
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
-        if [[ WITH_CORE_ONLY == '1']]; then
+        if [[ $WITH_CORE_ONLY == '1']]; then
             export TARGET="package run_all_tests";
         else
             export TARGET="run_all_tests";
@@ -114,13 +114,13 @@ script:
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
         export PATH="/usr/local/opt/ccache/libexec:$PATH"
         export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_clang_7_3_0_osx_amd64";
-        if [[ $BUILD_TYPE == 'Release' &&  WITH_CORE_ONLY == '1' ]]; then
+        if [[ $BUILD_TYPE == 'Release' && $WITH_CORE_ONLY == '1' ]]; then
             export TARGET="package";
         fi
     fi
   - ${SCRIPTS_DIR}/build.${TRAVIS_OS_NAME}.sh ${BUILD_TYPE} ${JOBS} ${COMPILER} ${THIRD_PARTY} ${TARGET}
-  - if [[ $TRAVIS_OS_NAME == 'linux' && WITH_CORE_ONLY == '1' ]]; then
-        ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER}
+  - if [[ $TRAVIS_OS_NAME == 'linux' && $WITH_CORE_ONLY == '1' ]]; then
+        ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER};
     fi
 
 # after_success:
