--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ matrix:
       osx_image: xcode8
       env: BUILD_TYPE=Debug COMPILER="clang"
     #
-    # Linux Builds
+    # Linux GCC Builds
     #
     - os: linux
       compiler: gcc
@@ -48,7 +48,7 @@ matrix:
       compiler: gcc
       env: BUILD_TYPE=Debug COMPILER="gcc"
     #
-    # Linux Builds
+    # Linux Clang Builds
     #
     - os: linux
       compiler: clang
