--- a/projects/dogen.dia/src/CMakeLists.txt
+++ b/projects/dogen.dia/src/CMakeLists.txt
@@ -29,6 +29,6 @@ set_target_properties(${name} PROPERTIES OUTPUT_NAME ${binary_name})
 set_target_properties(${name}
     PROPERTIES VERSION ${DOGEN_VERSION} SOVERSION ${DOGEN_MAJOR_VERSION})
 
-target_link_libraries(${name} ${Boost_LIBRARIES})
+target_link_libraries(${name} utility ${Boost_LIBRARIES})
 
 install(TARGETS ${name} ARCHIVE DESTINATION lib COMPONENT libraries)
