--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ find_package(Boost 1.61 REQUIRED COMPONENTS
     filesystem
     program_options
     unit_test_framework
+    regex
     )
 
 if (Boost_FOUND)
