appveyor: move to vcpkg

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,8 +23,9 @@ clone_depth: 1
 install:
   - ps: $project_dir="$pwd";
   - ps: .\build\scripts\appveyor.install.windows.ps1
-  - ps: $env:Path += "$env:temp/cmake/bin"
-  - ps: $env:Path += "C:\Program Files\LLVM\bin"
+  - ps: $env:Path += "c:\third_party\installs\cmake\bin"
+  - ps: $env:Path += "c:\third_party\installs\ninja\bin"
+  - ps: $env:Path = "C:\Program Files\LLVM\bin;$env:Path"
   - ps: clang-cl -v
 
 build_script:
