appveyor: debug output for clang-cl and update bintray config

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -30,9 +30,10 @@ build_script:
   - ps: $build_type="$env:configuration";
   - ps: $third_party="$env:temp\dogen_deps\dogen_deps_vc14_windows_amd64";
   - ps: $target = "ALL_BUILD run_windows_green_tests";
+  - ps: $compiler = $env:compiler;
   - ps: cd $project_dir
-  - ps: .\build\scripts\build.windows.ps1 -build_type $build_type -compiler $env:compiler -third_party $third_party -target $target
-  - ps: if ($build_type -eq "Release") {
+  - ps: .\build\scripts\build.windows.ps1 -build_type $build_type -compiler $compiler -third_party $third_party -target $target
+  - ps: if ($build_type -eq "Release" -and $compiler -eq "msvc") {
             cd $project_dir\build\output\$env:compiler\$build_type;
             $env:Path += ";" + $env:WIX;
             cpack -G WIX -C Release;
@@ -60,7 +61,7 @@ deploy:
     username: mcraveiro
     api_key:
       secure: aeW66aeBxn5W4wOnb5Ae9L1/dYRsAyWiJatWTpKPSwEgR1diIFPUUeSqQ4jTxeF8
-    subject: masd-project
+    subject: mcraveiro
     repo: Dogen
     package: Dogen
     artifact: build/output/msvc/Release/stage/pkg/dogen-1.0.09-Windows-AMD64.msi
