appveyor: update bintray package name once more

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -56,7 +56,7 @@ deploy:
       secure: aeW66aeBxn5W4wOnb5Ae9L1/dYRsAyWiJatWTpKPSwEgR1diIFPUUeSqQ4jTxeF8
     subject: masd-project
     repo: main
-    package: Dogen
+    package: dogen
     artifact: build/scripts/wget.exe
     version: 1.0.09
     publish: false
