--- a/.travis.yml
+++ b/.travis.yml
@@ -83,6 +83,8 @@ script:
   - ${SCRIPTS_DIR}/build.${TRAVIS_OS_NAME}.sh ${BUILD_TYPE} ${JOBS} ${COMPILER} ${THIRD_PARTY} ${TARGET}
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
         ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER};
+        ls /home/travis/build/MASD-Project/dogen/build/output/gcc/Release/stage/pkg/
+        cat /home/travis/build/MASD-Project/dogen/build/output/gcc/Release/stage/pkg/bintray.json
     fi
 
 # after_success:
