--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,8 +9,8 @@ image:
 
 environment:
   matrix:
-    - compiler: msvc
     - compiler: clang-cl
+    - compiler: msvc
 
 matrix:
   allow_failures:
@@ -32,11 +32,10 @@ install:
 
 build_script:
   - ps: $build_type="$env:configuration";
-  - ps: $third_party="$env:temp\dogen_deps\dogen_deps_vc14_windows_amd64";
   - ps: $target = "ALL_BUILD run_windows_green_tests";
   - ps: $compiler = $env:compiler;
   - ps: cd $project_dir
-  - ps: .\build\scripts\build.windows.ps1 -build_type $build_type -compiler $compiler -third_party $third_party -target $target
+  - ps: .\build\scripts\build.windows.ps1 -build_type $build_type -compiler $compiler -target $target
   - ps: if ($build_type -eq "Release" -and $compiler -eq "msvc") {
             cd $project_dir\build\output\$env:compiler\$build_type;
             $env:Path += ";" + $env:WIX;
