--- a/.travis.yml
+++ b/.travis.yml
@@ -105,6 +105,7 @@ notifications:
     on_failure: always
 
 deploy:
+  skip_cleanup: true
   provider: releases
   api_key:
     secure: UdotUzhLJ7GcmwyJlpqcsvWsXxuWjoswXG7intkgxKeD5vkIT6Ng2v7ik6c/4uO9wXJ9uWV8/X/EzdZhWqFjiamMljsmFGcy4Bt37oqP6oxdlRyO/KrLM1E/xtmA1kZppuY4njCqzZnMslyzyMtsl+DH3zseOL7GQIbkL5xbecI=
@@ -117,6 +118,7 @@ deploy:
     condition: "${DEPLOY} = 1"
 
 deploy:
+  skip_cleanup: true
   provider: bintray
   file: "${TRAVIS_BUILD_DIR}/build/output/${COMPILER}/${BUILD_TYPE}/stage/pkg/bintray.json"
   user: mcraveiro
