--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -36,7 +36,7 @@ build_script:
   - ps: $target = "ALL_BUILD run_windows_green_tests";
   - ps: $compiler = $env:compiler;
   - ps: cd $project_dir
-  - ps: ninja -v
+  - ps: C:\third_party\installs\Ninja\ninja.exe -v
   - ps: .\build\scripts\build.windows.ps1 -build_type $build_type -compiler $compiler -target $target
   - ps: if ($build_type -eq "Release" -and $compiler -eq "msvc") {
             cd $project_dir\build\output\$compiler\$build_type;
