--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,6 +10,8 @@ image:
 environment:
   matrix:
     - compiler: clang-cl
+      MSVC_SETUP_PATH: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat
+      MSVC_SETUP_ARG: x86_amd64
     - compiler: msvc
 
 matrix:
@@ -30,6 +32,10 @@ install:
   - ps: .\build\scripts\appveyor.install.windows.ps1
   - ps: $env:Path += ";C:\third_party\installs\Ninja"
   - ps: $env:CMAKE_TOOLCHAIN_FILE = "c:\third_party\installs\vcpkg-export\scripts\buildsystems\vcpkg.cmake"
+
+before_build:
+  - if DEFINED MSVC_SETUP_PATH call "%MSVC_SETUP_PATH%" %MSVC_SETUP_ARG%
+  - cd %APPVEYOR_BUILD_FOLDER%
 
 build_script:
   - ps: $build_type="$env:configuration";
