--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -41,7 +41,7 @@ build_script:
   - ps: $env:BUILD_PROVIDER = "appveyor"
   - ps: $env:BUILD_COMMIT = $env:APPVEYOR_REPO_COMMIT
   - ps: $env:BUILD_NUMBER = $env:APPVEYOR_BUILD_VERSION
-  - ps: $env:BUILD_TIMESTAMP = Get-Date -format "yyyy/MM/dd HH:MM:SS"
+  - ps: $env:BUILD_TIMESTAMP = Get-Date -format "yyyy/MM/dd HH:mm:ss"
   - ps: $build_type = "$env:configuration";
   - ps: $compiler = $env:compiler;
   - ps: if ($compiler -eq "msvc") {
