--- a/.travis.yml
+++ b/.travis.yml
@@ -33,17 +33,17 @@ matrix:
     - os: osx
       compiler: clang
       osx_image: xcode10
-      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="clang"
+      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="clang" GENERATOR="Unix Makefiles"
     - os: osx
       compiler: clang
       osx_image: xcode10
-      env: BUILD_TYPE=Debug COMPILER="clang"
+      env: BUILD_TYPE=Debug COMPILER="clang" GENERATOR="Unix Makefiles"
     #
     # Linux GCC Builds
     #
     - os: linux
       compiler: gcc
-      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="gcc"
+      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="gcc" GENERATOR="Ninja"
     - os: linux
       compiler: gcc
       env: BUILD_TYPE=Debug COMPILER="gcc"
@@ -52,7 +52,7 @@ matrix:
     #
     - os: linux
       compiler: clang
-      env: BUILD_TYPE=Release COMPILER="clang"
+      env: BUILD_TYPE=Release COMPILER="clang" GENERATOR="Ninja"
     - os: linux
       compiler: clang
       env: BUILD_TYPE=Debug COMPILER="clang"
@@ -76,6 +76,8 @@ script:
         export CMAKE_TOOLCHAIN_FILE="/tmp/vcpkg-export/scripts/buildsystems/vcpkg.cmake"
         export TARGET="package run_all_tests";
         export THIRD_PARTY="/tmp/dogen_deps/local";
+        ctest --extra-verbose --script ".ctest.cmake,configuration_type=Release${BUILD_TYPE},generator=${GENERATOR},compiler=${COMPILER},number_of_jobs=${JOBS}"
+        ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER};
     fi
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
         export PATH="/usr/local/opt/ccache/libexec:$PATH";
@@ -83,10 +85,7 @@ script:
         if [[ $BUILD_TYPE == 'Release' ]]; then
             export TARGET="package";
         fi
-    fi
-  - ${SCRIPTS_DIR}/build.${TRAVIS_OS_NAME}.sh ${BUILD_TYPE} ${JOBS} ${COMPILER} ${THIRD_PARTY} ${TARGET}
-  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
-        ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER};
+        ${SCRIPTS_DIR}/build.${TRAVIS_OS_NAME}.sh ${BUILD_TYPE} ${JOBS} ${COMPILER} ${THIRD_PARTY} ${TARGET}
     fi
 
 # after_success:
