--- a/.travis.yml
+++ b/.travis.yml
@@ -73,24 +73,20 @@ script:
   - export BUILD_NUMBER=${TRAVIS_BUILD_NUMBER}
   - export BUILD_TIMESTAMP=`date "+%Y/%m/%d %H:%M:%S"`
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
-        export CMAKE_TOOLCHAIN_FILE="/tmp/vcpkg-export/scripts/buildsystems/vcpkg.cmake"
-        export TARGET="package run_all_tests";
-        ctest --extra-verbose --script ".ctest.cmake,configuration_type=${BUILD_TYPE},generator=${GENERATOR},compiler=${COMPILER},number_of_jobs=${JOBS}";
-        ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER};
+        export CMAKE_TOOLCHAIN_FILE="/tmp/vcpkg-export/scripts/buildsystems/vcpkg.cmake";
     fi
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
-        export PATH="/usr/local/opt/ccache/libexec:$PATH";
         export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_clang_7_3_0_osx_amd64";
         export CMAKE_INCLUDE_PATH=${THIRD_PARTY}/include;
         export CMAKE_LIBRARY_PATH=${THIRD_PARTY}/lib;
         export DYLD_FALLBACK_LIBRARY_PATH=${THIRD_PARTY}/lib;
-        echo "DYLD_FALLBACK_LIBRARY_PATH: $DYLD_FALLBACK_LIBRARY_PATH";
-        export PATH=${THIRD_PARTY_party}/bin:${PATH};
-        if [[ $BUILD_TYPE == 'Release' ]]; then
-            export TARGET="package";
-        fi;
-        ctest --extra-verbose --script ".ctest.cmake,configuration_type=${BUILD_TYPE},generator=${GENERATOR},compiler=${COMPILER},number_of_jobs=${JOBS}";
+        export PATH="/usr/local/opt/ccache/libexec:$PATH";
+        export PATH=${THIRD_PARTY}/bin:${PATH};
     fi
+    ctest --extra-verbose --script ".ctest.cmake,configuration_type=${BUILD_TYPE},generator=${GENERATOR},compiler=${COMPILER},number_of_jobs=${JOBS}";
+    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
+        ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER};
+      fi
 
 # after_success:
 #  - gcov --version
