travis: rename build agent back to  build provider
We borked the version info with this change.

--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ install:
 
 script:
   - JOBS=2
-  - export BUILD_AGENT=travis
+  - export BUILD_PROVIDER=travis
   - export BUILD_COMMIT=${TRAVIS_COMMIT}
   - export BUILD_NUMBER=${TRAVIS_BUILD_NUMBER}
   - export BUILD_TIMESTAMP=`date "+%Y/%m/%d %H:%M:%S"`
