--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,10 @@ environment:
     - compiler: clang-cl
       MSVC_SETUP_PATH: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat
       MSVC_SETUP_ARG: x86_amd64
+      GENERATOR: "Ninja"
+
     - compiler: msvc
+      GENERATOR: "Visual Studio 15 2017 Win64";
 
 matrix:
   allow_failures:
@@ -31,6 +34,7 @@ install:
   - ps: $project_dir="$pwd";
   - ps: .\build\scripts\appveyor.install.windows.ps1
   - ps: $env:Path += ";C:\third_party\installs\Ninja"
+  - ps: $env:Path += ";" + $env:WIX;
   - ps: $env:CMAKE_TOOLCHAIN_FILE = "c:\third_party\installs\vcpkg-export\scripts\buildsystems\vcpkg.cmake"
 
 before_build:
@@ -42,20 +46,9 @@ build_script:
   - ps: $env:BUILD_COMMIT = $env:APPVEYOR_REPO_COMMIT
   - ps: $env:BUILD_NUMBER = $env:APPVEYOR_BUILD_VERSION
   - ps: $env:BUILD_TIMESTAMP = Get-Date -format "yyyy/MM/dd HH:mm:ss"
-  - ps: $build_type = "$env:configuration";
-  - ps: $compiler = $env:compiler;
-  - ps: if ($compiler -eq "msvc") {
-            $target = "ALL_BUILD run_windows_green_tests";
-        } elseif ($compiler -eq "clang-cl") {
-            $target = "all run_windows_green_tests";
-        }
-  - ps: cd $project_dir
-  - ps: .\build\scripts\build.windows.ps1 -build_type $build_type -compiler $compiler -target $target
-  - ps: if ($build_type -eq "Release" -and $compiler -eq "msvc") {
-            cd $project_dir\build\output\$compiler\$build_type;
-            $env:Path += ";" + $env:WIX;
-            cpack -G WIX -C Release;
-        }
+  - ps: $BUILD_TYPE = "$env:configuration";
+  - ps: $COMPILER = $env:compiler;
+  - ps: ctest --extra-verbose --script ".ctest.cmake,configuration_type=${BUILD_TYPE},generator=${GENERATOR},compiler=${COMPILER}";
 
 artifacts:
   - path: build/output/msvc/Release/stage/pkg/dogen-1.0.09-Windows-AMD64.msi
