--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,11 +10,13 @@ image:
 environment:
   matrix:
     - compiler: clang-cl
+      generator: Ninja
+      build_group: Experimental
       msvc_setup_path: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat
       msvc_setup_arg: x86_amd64
-      generator: Ninja
     - compiler: msvc
       generator: Visual Studio 15 2017 Win64
+      build_group: Continuous
 
 matrix:
   allow_failures:
@@ -45,7 +47,7 @@ build_script:
   - ps: $env:BUILD_COMMIT = $env:APPVEYOR_REPO_COMMIT
   - ps: $env:BUILD_NUMBER = $env:APPVEYOR_BUILD_VERSION
   - ps: $env:BUILD_TIMESTAMP = Get-Date -format "yyyy/MM/dd HH:mm:ss"
-  - ps: ctest --extra-verbose --script ".ctest.cmake,configuration_type=$env:configuration,generator=$env:generator,compiler=$env:compiler";
+  - ps: ctest --extra-verbose --script ".ctest.cmake,configuration_type=$env:configuration,generator=$env:generator,compiler=$env:compiler,build_group=$env:build_group";
 
 artifacts:
   - path: build/output/msvc/Release/stage/pkg/dogen-1.0.09-Windows-AMD64.msi
