--- a/.travis.yml
+++ b/.travis.yml
@@ -33,29 +33,29 @@ matrix:
     - os: osx
       compiler: clang
       osx_image: xcode10
-      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="clang" GENERATOR="Unix Makefiles"
+      env: deploy="1" configuration=Release compiler="clang" generator="Unix Makefiles" build_group="Continuous"
     - os: osx
       compiler: clang
       osx_image: xcode10
-      env: BUILD_TYPE=Debug COMPILER="clang" GENERATOR="Unix Makefiles"
+      env: configuration=Debug compiler="clang" generator="Unix Makefiles" build_group="Continuous"
     #
     # Linux GCC Builds
     #
     - os: linux
       compiler: gcc
-      env: BUILD_TYPE=Release DEPLOY="1" COMPILER="gcc8" GENERATOR="Ninja"
+      env: deploy="1" configuration=Release compiler="gcc8" generator="Ninja" build_group="Continuous"
     - os: linux
       compiler: gcc
-      env: BUILD_TYPE=Debug COMPILER="gcc8" GENERATOR="Ninja"
+      env: configuration=Debug compiler="gcc8" generator="Ninja" build_group="Continuous"
     #
     # Linux Clang Builds
     #
     - os: linux
       compiler: clang
-      env: BUILD_TYPE=Release COMPILER="clang7" GENERATOR="Ninja"
+      env: configuration=Release compiler="clang7" generator="Ninja" build_group="Continuous"
     - os: linux
       compiler: clang
-      env: BUILD_TYPE=Debug COMPILER="clang7" GENERATOR="Ninja"
+      env: configuration=Debug compiler="clang7" generator="Ninja" build_group="Continuous"
 
 addons:
   apt:
@@ -83,9 +83,9 @@ script:
         export PATH="/usr/local/opt/ccache/libexec:$PATH";
         export PATH=${THIRD_PARTY}/bin:${PATH};
     fi
-  - ctest --extra-verbose --script ".ctest.cmake,configuration_type=${BUILD_TYPE},generator=${GENERATOR},compiler=${COMPILER},number_of_jobs=${JOBS}";
+  - ctest --extra-verbose --script ".ctest.cmake,configuration_type=${configuration},generator=${generator},compiler=${compiler},number_of_jobs=${JOBS},build_group=${build_group}";
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
-        ${SCRIPTS_DIR}/test_package.linux.sh ${BUILD_TYPE} ${COMPILER};
+        ${SCRIPTS_DIR}/test_package.linux.sh ${configuration} ${compiler};
     fi
 
 # after_success:
@@ -116,15 +116,15 @@ deploy:
   on:
     tags: true
     branch: master
-    condition: "${DEPLOY} = 1"
+    condition: "${deploy} = 1"
 
 deploy:
   skip_cleanup: true
   provider: bintray
-  file: "${TRAVIS_BUILD_DIR}/build/output/${COMPILER}/${BUILD_TYPE}/stage/pkg/bintray.json"
+  file: "${TRAVIS_BUILD_DIR}/build/output/${compiler}/${configuration}/stage/pkg/bintray.json"
   user: mcraveiro
   key:
     secure: IrFRrzzMnnFzj2s2hYctnvMjTf7HRe5uQVPcioAjbuNrxXX5XYmRH6ce8osxoRhcpQYS9ppCmrt8VbRBB57piWS3yKfM6WftDrmNQil7XwqowKAKm/VuX6K5psjJHRCYoNUAovwvfLmaLIWvVd+I+NkU48EXvflClXx13Qp8GtU=
   on:
     branch: master
-    condition: "${DEPLOY} = 1"
+    condition: "${deploy} = 1"
