--- a/.travis.yml
+++ b/.travis.yml
@@ -90,7 +90,7 @@ script:
 
 after_success:
   - if [[ ${configuration} == "Debug" && $TRAVIS_OS_NAME == 'linux' && ${compiler} == "clang7" ]]; then
-        /tmp/kcov --include-pattern dogen --coveralls-id=${TRAVIS_JOB_ID} ${TRAVIS_BUILD_DIR}/build/output/${compiler}/${configuration}/stage/bin/ dogen.annotations.tests
+        /tmp/kcov --include-pattern dogen --coveralls-id=${TRAVIS_JOB_ID} ${TRAVIS_BUILD_DIR}/build/output/${compiler}/${configuration}/stage/bin/ dogen.annotations.tests;
     fi
 
 notifications:
