--- a/.travis.yml
+++ b/.travis.yml
@@ -76,7 +76,7 @@ script:
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
         export PATH="/usr/local/opt/ccache/libexec:$PATH";
     fi
-  - ctest --extra-verbose --script ".ctest.cmake,configuration_type=${configuration},generator=${generator},compiler=${compiler},number_of_jobs=${JOBS},build_group=${build_group}";
+  - ctest --extra-verbose --script ".ctest.cmake,configuration_type=${configuration},generator=${generator},compiler=${compiler},number_of_jobs=${JOBS},build_group=${build_group},minimal_packaging=1";
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
         ${SCRIPTS_DIR}/test_package.linux.sh ${configuration} ${compiler};
     fi
