travis: allow failures on linux debug
- ctest: re-enable tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,9 @@ matrix:
     - os: linux
       compiler: clang
       env: configuration=Release compiler="clang7" generator="Ninja" build_group="Continuous"
+
+  allow_failures:
+    # build timing out at present
     - os: linux
       compiler: clang
       env: coverage=1 configuration=Debug compiler="clang7" generator="Ninja" build_group="Continuous"
