travis: try a different incantation for allow failures

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,12 @@ git:
   depth: 2
 
 matrix:
+  allow_failures:
+    # build timing out at present
+    - os: linux
+      compiler: gcc
+      env: configuration=Debug compiler="gcc8" generator="Ninja" build_group="Continuous"
+
   include:
     #
     # OSX builds
@@ -53,9 +59,6 @@ matrix:
     - os: linux
       compiler: clang
       env: configuration=Release compiler="clang7" generator="Ninja" build_group="Continuous"
-
-  allow_failures:
-    # build timing out at present
     - os: linux
       compiler: clang
       env: coverage=1 configuration=Debug compiler="clang7" generator="Ninja" build_group="Continuous"
