appveyor: try to allow failures for msvc debug builds

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,6 +17,8 @@ environment:
 matrix:
   allow_failures:
     - compiler: clang-cl
+    - compiler: msvc
+      configuration: Debug
 
 configuration:
   - Release
